add preview page

--- a/index.html
+++ b/index.html
@@ -17,10 +17,26 @@
 
     <body>
 
+        <div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/zh_TW/sdk.js?t-1#xfbml=1&version=v2.7&appId=1010324812347164";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
+
         <div id="cover">
             <h1>從零到爆品 洞察讀者的探索實驗</h1>
         </div>
-
+        <div class="share-block container">
+            <div class="fb-like-block">
+				<div class="fb-like" data-href="./index.html" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+			</div>
+			<div class="line-block">
+				<img class="line-share" style="position:relative;top:-2px;" src="//media.line.me/img/button/zh-hant/84x20.png" width="86" height="22" alt="LINE分享給朋友">
+			</div>
+        </div>
         <div class="content container">
             <h2>【聯合報新媒體研究報告】</h2>
             <p>「誰」讀你寫的文字？</p>
@@ -35,17 +51,21 @@
             <p>每次推出專題前，壓力來源除了原生的「內容正確性、扎實度」，還有「讀者是誰？」的焦慮。</p>
             <p><br/></p>
             <p>為了釐清「讀者是誰？」以及「為什麼讀？」這兩個問題，我們嘗試雜揉廣告溝通、產品設計與社群分眾的概念，力圖讓「溝通」重回新聞與讀者間。以下整理出三點心得與大家分享：</p>
-            <hr>
+        </div>
+        <hr>
+        <div class="content container">
             <h2>一句話講清楚 為何這事值得關注！</h2>
             <p>「欸，你覺這個題目要跟讀者講的事情是什麼啊？」</p>
             <p><br/></p>
             <p>專題進行到一個程度，這個問題經常默默的、自動的浮現在工作對話中。時間到了，總是不得不面對這個問題。對喜愛寫字的人而言，自由書寫是最愉快的狀態，但是新聞作為面對公眾，希望創造影響力的工作，「溝通成效」不容忽視。</p>
             <p><br/></p>
             <p>換句話說，內容生產者必須清楚一則內容想要達成的「核心溝通主張」為何，像思考與讀者的切身性、關聯性何在，讓他們願意花力氣閱讀文章？</p>
-            <div class="img-contain container">
-                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.011.png">
-                <div class="img-say">思考與讀者的切身性、關聯性何在，讓他們願意花力氣閱讀文章？</div>
-            </div>
+        </div>
+        <div class="img-contain container">
+            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.011.png">
+            <div class="img-say">思考與讀者的切身性、關聯性何在，讓他們願意花力氣閱讀文章？</div>
+        </div>
+        <div class="content container">
             <p>這句話有兩大任務：</p>
             <p>一、收斂專題內容，幫助記者在採訪素材中抓出核心溝通軸線</p>
             <p>二、定位與讀者的溝通方式</p>
@@ -58,7 +78,9 @@
             <p>三、「核心觀點是什麼？」</p>
             <p><br/></p>
             <p>最後用一句話統整上述的答案，就形成「核心溝通主張」，作為專題內容與讀者間的溝通基礎。</p>
-            <hr>
+        </div>
+        <hr>
+        <div class="content container">
             <h2>承認吧！「分眾」才是傳播的本質</h2>
             <p>「好了！上線了。」熬了一個晚上，3月30日下午推出〈我戒毒，妹妹卻因毒而死：5個少年染毒的故事〉，開著GA後台觀察分秒變化，數字持續往上增加，背後都是一位對著螢幕的讀者。數字最後來到34萬，並有20位以上縣市首長、政治人物分享，青少年校園毒品的議題從法學、社工、警政等關心這個領域的讀者，向外擴散至一般大眾。</p>
             <p><br/></p>
@@ -67,31 +89,70 @@
             <p>多數閱讀量都來自前兩個族群，而傳播的推動力更主要來自非常關心的那少數人，在商業的世界中他們被稱為「鐵粉」。這群有相同觀點的「鐵粉」，在社交網絡上的按讚、留言與轉貼，透過不同面向的貼文詮釋，每一個人都成為跨族群傳播的節點。</p>
             <p><br/></p>
             <p>大大小小的節點相連，形成了圈層化的傳播路徑。能串起不同社群的個人就是跨域傳播的「關鍵轉發者」，而有越多這種連結的人，本身也越有機會成為廣為人知的意見領袖。</p>
-            <div class="img-contain">
-                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.014.png">
-                <div class="img-say">能串起不同社群的個人，就是跨域傳播的「關鍵轉發者」，而有越多這種連結的人，本身也越有機會成為廣為人知的意見領袖。</div>
-            </div>
+        </div>
+        <div class="img-contain container">
+            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.014.png">
+            <div class="img-say">能串起不同社群的個人，就是跨域傳播的「關鍵轉發者」，而有越多這種連結的人，本身也越有機會成為廣為人知的意見領袖。</div>
+        </div>
+        <div class="content container">
             <p>議題的傳播就是靠一個又一個「關鍵轉發者」向外擴散，從內容的角度看，讀者樣貌的定義變得無比重要，思考「誰是第一時間轉發的人？」可以從幾個點切入觀察：</p>
             <p>一、「誰平時就會關心相關資訊？」</p>
             <p>二、「哪裡有明確的粉絲專頁或社團在討論相關議題？」</p>
             <p>三、「是否有曾經引發討論的相關事件？又是誰在討論？」</p>
-            <div class="img-contain">
-                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017-15.001.jpeg">
-                <div class="img-say">能串起不同社群的個人，就是跨域傳播的「關鍵轉發者」，而有越多這種連結的人，本身也越有機會成為廣為人知的意見領袖。</div>
-            </div>
+        </div>
+        <div class="img-contain container">
+            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017-15.001.jpeg">
+            <div class="img-say">能串起不同社群的個人，就是跨域傳播的「關鍵轉發者」，而有越多這種連結的人，本身也越有機會成為廣為人知的意見領袖。</div>
+        </div>
+        <div class="content container">
             <p>搜集這些資訊，將有助於了解讀者心中的想法，他們的好奇、想像與價值觀，找到新聞與核心讀者有關的利益結合點，回答他們心中的問題，創造轉傳動機。</p>
             <p><br/></p>
             <p>TED 有一則非常知名的3分鐘演講〈如何發起群眾運動〉。</p>
-            <div class="iframe-contain embed-responsive embed-responsive-16by9">
-                <iframe class="lazyload embed-responsive-item" data-src="https://www.youtube.com/embed/V74AxCqOTvg" frameborder="0" allowfullscreen></iframe>
-            </div>
+        </div>
+        <div class="iframe-contain embed-responsive embed-responsive-16by9 container">
+            <iframe class="lazyload embed-responsive-item" data-src="https://www.youtube.com/embed/V74AxCqOTvg" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="content container">
             <p>畫面中，一個人大喊、跳舞時被視為異類，但如果有一個人加入你，你與他產生了連結，彼此站在同一陣線，就會機會吸引第三位、第四位，人的影響力網絡就樣向外擴散。</p>
             <p><br/></p>
             <p>但這少了第一個人的響應就不可能發生，<b>找到那位願意支持你的第一個響應者非常重要</b>。</p>
             <hr>
             <h2>整合性規劃的議題行銷設計表 <br> (Canvas for Marketing Your Issue)</h2>
             <p>議題傳播除了有清楚的核心溝通主張（內容）、明確的讀者樣貌等「人和的條件」外，還需要天時與地利的協助，包括與<b>讀者接觸的管道、溝通的媒介形式與擴散時間點</b>。</p>
-
+        </div>
+        <div class="img-contain container">
+            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.019.png">
+            <div class="img-say">議題行銷設計表(Canvas for Marketing Your Issue)</div>
+        </div>
+        <div class="content container">
+            <p>借用<a href="https://en.wikipedia.org/wiki/Business_Model_Canvas" target="_blank">商業模式畫布</a>的格式，改做成議題行銷設計表，協助整體概念的發想。</p>
+            <p>① 核心溝通主張：清楚、簡單的一句話，說明為什麼這件事值得他們關心</p>
+            <p>② 讀者樣貌：誰是願意踴躍討論、有切身經歷、與專業相關的核心讀者？</p>
+            <p>③ 目標成果：兼具量化與質化的評估指標。</p>
+            <p>④ 共鳴點：哪些討論角度跟他們相關？他們想知道什麼？</p>
+            <p>⑤ 溝通形式：能引起他們共鳴的文字、資料、影音、線下活動等自身可掌握的資源。</p>
+            <p>⑥ 關鍵資源：可協助觸及讀者的人、事件、組織。</p>
+            <p>⑦ 溝通時間點＆所需成本：近期是否有相關的討論話題，或即將發生的議題？並評估所需資源。</p>
+            <p><br/></p>
+        </div>
+        <div class="img-contain container">
+            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/drug.jpg">
+        </div>
+        <div class="img-contain container">
+            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.020.png">
+        </div>
+        <div class="img-contain container">
+            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/south-sudan.jpg">
+        </div>
+        <div class="img-contain container">
+            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.021.png">
+        </div>
+        <hr>
+        <div class="content container">
+            <h2>小結：一切都是進行式</h2>
+            <p>從核心溝通主張、分眾到傳播過程的設計，都是將內容與讀者重新產生連結、接軌的嘗試，希望重塑內容與讀者之間的關係。</p>
+            <p><br/></p>
+            <p>議題與社群之間，關係的經營是不斷的溝通循環，每一則內容，都是與讀者溝通的機會，讓服務不同族群讀者的內容，能越趨貼近讀者已知的需求、或未知的疑問。</p>
         </div>
     </body>
 
