add report block

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="fb-like" data-href="./index.html" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 			</div>
 			<div class="line-block">
-				<img class="line-share" style="position:relative;top:-2px;" src="//media.line.me/img/button/zh-hant/84x20.png" width="86" height="22" alt="LINE分享給朋友">
+				<img class="line-share" style="position:relative;" src="//media.line.me/img/button/zh-hant/84x20.png" width="86" height="22" alt="LINE分享給朋友">
 			</div>
         </div>
         <div class="content container">
@@ -154,6 +154,74 @@
             <p><br/></p>
             <p>議題與社群之間，關係的經營是不斷的溝通循環，每一則內容，都是與讀者溝通的機會，讓服務不同族群讀者的內容，能越趨貼近讀者已知的需求、或未知的疑問。</p>
         </div>
+        <div class="people-contain container">
+            <div class="row">
+                <div class="col-md-2">
+                    <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/pm.jpg">
+                </div>
+                <div class="col-md-10">
+                    <h3><b>新媒體中心／數位內容製作 魏妤庭</b>
+                    <h3>一手捧書一手握鍋鏟，是個資訊怪，總好奇新技術在資訊傳遞上的應用，想辦法讓報導更貼近讀者的需要。</h3>
+                </div>
+            </div>
+        </div>
+        <div class="share-block container">
+            <div class="fb-like-block">
+				<div class="fb-like" data-href="./index.html" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+			</div>
+			<div class="line-block">
+				<img class="line-share" style="position:relative;" src="//media.line.me/img/button/zh-hant/84x20.png" width="86" height="22" alt="LINE分享給朋友">
+			</div>
+            <div class="logo-block">
+                <div class="udn-logo">
+                    <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/udn-logo.jpg">
+                </div>
+                <div class="nmd-logo">
+                    <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/nmd-logo.png">
+                </div>
+            </div>
+        </div>
+        <div class="container" id="editor">
+			<div class="editor">文字：林秀姿、蔡佩蓉、劉嘉韻、鄧桂芬</div>
+			<div class="editor">影音、視覺設計：許瑋琳、蘇士堯</div>
+			<div class="editor">攝影：黃仲裕、林俊良、胡經周</div>
+			<div class="editor">網頁製作：鄭偉廷</div>
+			<div class="editor">監製：林新輝、洪淑惠、董谷音、魏忻忻、蔡幸怡</div>
+			<div class="editor">議題行銷：張乃文、蔡嘉棋、盧巧梅</div>
+            <div class="editor">2017.04.27</div>
+		</div>
+        <div id="report" class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <a href="http://p.udn.com.tw/upf/newmedia/2017_data/20170303_3dmedia/index.html" target="_blank">
+                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/3Dmodel.jpg">
+                        <p>3D模型新聞應用 簡易入門分享</p>
+                    </a>
+                </div>
+                <div class="col-sm-3">
+                    <a href="http://p.udn.com.tw/upf/newmedia/2017_data/20170222_maps/index.html" target="_blank">
+                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/maps.jpg">
+                        <p>新聞✖地圖✖資訊 新媒體菜鳥的QGIS心得</p>
+                    </a>
+                </div>
+                <div class="col-sm-3">
+                    <a href="http://p.udn.com.tw/upf/newmedia/2017_data/20170208_vrarmr2/index.html" target="_blank">
+                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/vr.jpg">
+                        <p>實境科技發展 給媒體的未來啟示</p>
+                    </a>
+                </div>
+                <div class="col-sm-3">
+                    <a href="https://www.facebook.com/groups/UDNNEWMEDIA/?fref=ts" target="_blank">
+                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/salon.jpg">
+                        <p>聯。沙龍</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="fb-comment-block container">
+            <div class="fb-comments" data-href="https://udn.com/upf/newmedia/index.html" data-numposts="5" data-width="100%"></div>
+        </div>
+
     </body>
 
 </html>
