add lazyload height magic

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             <p>換句話說，內容生產者必須清楚一則內容想要達成的「核心溝通主張」為何，像思考與讀者的切身性、關聯性何在，讓他們願意花力氣閱讀文章？</p>
         </div>
         <div class="img-contain container">
-            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.011.png">
+            <div class="lazy-contain">
+                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.011.png">
+            </div>
             <div class="img-say">思考與讀者的切身性、關聯性何在，讓他們願意花力氣閱讀文章？</div>
         </div>
         <div class="content container">
@@ -91,7 +93,9 @@
             <p>大大小小的節點相連，形成了圈層化的傳播路徑。能串起不同社群的個人就是跨域傳播的「關鍵轉發者」，而有越多這種連結的人，本身也越有機會成為廣為人知的意見領袖。</p>
         </div>
         <div class="img-contain container">
-            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.014.png">
+            <div class="lazy-contain">
+                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.014.png">
+            </div>
             <div class="img-say">能串起不同社群的個人，就是跨域傳播的「關鍵轉發者」，而有越多這種連結的人，本身也越有機會成為廣為人知的意見領袖。</div>
         </div>
         <div class="content container">
@@ -101,7 +105,9 @@
             <p>三、「是否有曾經引發討論的相關事件？又是誰在討論？」</p>
         </div>
         <div class="img-contain container">
-            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017-15.001.jpeg">
+            <div class="lazy-contain">
+                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017-15.001.jpeg">
+            </div>
             <div class="img-say">能串起不同社群的個人，就是跨域傳播的「關鍵轉發者」，而有越多這種連結的人，本身也越有機會成為廣為人知的意見領袖。</div>
         </div>
         <div class="content container">
@@ -121,7 +127,9 @@
             <p>議題傳播除了有清楚的核心溝通主張（內容）、明確的讀者樣貌等「人和的條件」外，還需要天時與地利的協助，包括與<b>讀者接觸的管道、溝通的媒介形式與擴散時間點</b>。</p>
         </div>
         <div class="img-contain container">
-            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.019.png">
+            <div class="lazy-contain">
+                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.019.png">
+            </div>
             <div class="img-say">議題行銷設計表(Canvas for Marketing Your Issue)</div>
         </div>
         <div class="content container">
@@ -136,16 +144,24 @@
             <p><br/></p>
         </div>
         <div class="img-contain container">
-            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/drug.jpg">
+            <div class="lazy-contain">
+                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/drug.jpg">
+            </div>
         </div>
         <div class="img-contain container">
-            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.020.png">
+            <div class="lazy-contain">
+                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.020.png">
+            </div>
         </div>
         <div class="img-contain container">
-            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/south-sudan.jpg">
+            <div class="lazy-contain">
+                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/south-sudan.jpg">
+            </div>
         </div>
         <div class="img-contain container">
-            <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.021.png">
+            <div class="lazy-contain">
+                <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/HackNTU2017.021.png">
+            </div>
         </div>
         <hr>
         <div class="content container">
