add indicator bar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://udn.com/upf/newmedia/js/lazysizes.min.js"></script>
+    <script src="js/index.js"></script>
 
     <body>
 
@@ -25,7 +26,9 @@
 		  js.src = "//connect.facebook.net/zh_TW/sdk.js?t-1#xfbml=1&version=v2.7&appId=1010324812347164";
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
-
+        <div id="indicator">
+			<div id="indicator-bar"></div>
+		</div>
         <div id="cover">
             <h1>從零到爆品 洞察讀者的探索實驗</h1>
         </div>
