Add quote and head

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <div id="indicator">
 			<div id="indicator-bar"></div>
 		</div>
+        <div id="head">
+            <div id="icon">
+                <img src="https://udn.com/upf/newmedia/image/udn.png">
+            </div>
+        </div>
         <div id="cover">
             <h1>從零到爆品 洞察讀者的探索實驗</h1>
         </div>
@@ -54,6 +59,7 @@
             <p>每次推出專題前，壓力來源除了原生的「內容正確性、扎實度」，還有「讀者是誰？」的焦慮。</p>
             <p><br/></p>
             <p>為了釐清「讀者是誰？」以及「為什麼讀？」這兩個問題，我們嘗試雜揉廣告溝通、產品設計與社群分眾的概念，力圖讓「溝通」重回新聞與讀者間。以下整理出三點心得與大家分享：</p>
+            <blockquote>Quote Test Quote Test Quote Test Quote Test Quote Test Quote Test Quote Test</blockquote>
         </div>
         <hr>
         <div class="content container">
