Add footer and fixed iframe

--- a/index.html
+++ b/index.html
@@ -124,8 +124,10 @@
             <p><br/></p>
             <p>TED 有一則非常知名的3分鐘演講〈如何發起群眾運動〉。</p>
         </div>
-        <div class="iframe-contain embed-responsive embed-responsive-16by9 container">
-            <iframe class="lazyload embed-responsive-item" data-src="https://www.youtube.com/embed/V74AxCqOTvg" frameborder="0" allowfullscreen></iframe>
+        <div class="iframe-contain container">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="lazyload embed-responsive-item" data-src="https://www.youtube.com/embed/V74AxCqOTvg?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
         <div class="content container">
             <p>畫面中，一個人大喊、跳舞時被視為異類，但如果有一個人加入你，你與他產生了連結，彼此站在同一陣線，就會機會吸引第三位、第四位，人的影響力網絡就樣向外擴散。</p>
@@ -246,6 +248,12 @@
         <div class="fb-comment-block container">
             <div class="fb-comments" data-href="https://udn.com/upf/newmedia/index.html" data-numposts="5" data-width="100%"></div>
         </div>
+        <footer>
+            <span class="footer-link footer-right-board"><a href="http://www.udngroup.com/" target="_blank">聯合報系</a></span>
+            <span class="footer-link footer-right-board"><a href="https://www.facebook.com/udnplus" target="_blank">粉絲團</a></span>
+            <span class="footer-link footer-right-board"><a href="http://udndata.com/udnauthority.html" target="_blank">新聞授權</a></span>
+            <span class="footer-link"><a href="http://www.udngroup.com/information/privacy" target="_blank">隱私權聲明</a></span>
+        </footer>
 
     </body>
 
