Fix head transition

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
         <div id="head">
             <div id="icon">
-                <img src="https://udn.com/upf/newmedia/image/udn.png">
+                <a href="."><img src="https://udn.com/upf/newmedia/image/udn.png"></a>
             </div>
         </div>
         <div id="cover">
