add all to readme

--- a/index.html
+++ b/index.html
@@ -209,13 +209,8 @@
             </div>
         </div>
         <div class="container" id="editor">
-			<div class="editor">文字：林秀姿、蔡佩蓉、劉嘉韻、鄧桂芬</div>
-			<div class="editor">影音、視覺設計：許瑋琳、蘇士堯</div>
-			<div class="editor">攝影：黃仲裕、林俊良、胡經周</div>
-			<div class="editor">網頁製作：鄭偉廷</div>
-			<div class="editor">監製：林新輝、洪淑惠、董谷音、魏忻忻、蔡幸怡</div>
-			<div class="editor">議題行銷：張乃文、蔡嘉棋、盧巧梅</div>
-            <div class="editor">2017.04.27</div>
+			<div class="editor">文字：魏妤庭</div>
+            <div class="editor">2017.05.08</div>
 		</div>
         <div id="report" class="container">
             <div class="row">
