add line image cursor and logo link

--- a/index.html
+++ b/index.html
@@ -201,10 +201,14 @@
 			</div>
             <div class="logo-block">
                 <div class="udn-logo">
-                    <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/udn-logo.jpg">
+                    <a href="https://udn.com/news/index" target="_blank">
+                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/udn-logo.jpg">
+                    </a>
                 </div>
                 <div class="nmd-logo">
-                    <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/nmd-logo.png">
+                    <a href="https://udn.com/upf/newmedia/udn_newmedia/index.html" target="_blank">
+                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/nmd-logo.png">
+                    </a>
                 </div>
             </div>
         </div>
