--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
         </div>
         <div class="people-contain container">
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-2 col-xs-4">
                     <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/pm.jpg">
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-10 col-xs-8">
                     <h3><b>新媒體中心／數位內容製作 魏妤庭</b>
                     <h3>一手捧書一手握鍋鏟，是個資訊怪，總好奇新技術在資訊傳遞上的應用，想辦法讓報導更貼近讀者的需要。</h3>
                 </div>
@@ -217,6 +217,7 @@
             <div class="editor">2017.05.08</div>
 		</div>
         <div id="report" class="container">
+            <h6>聯合報聯沙龍研究報告</h6>
             <div class="row">
                 <div class="col-sm-3">
                     <a href="http://p.udn.com.tw/upf/newmedia/2017_data/20170303_3dmedia/index.html" target="_blank">
