mobile css fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="cover">
             <h1>從零到爆品 洞察讀者的探索實驗</h1>
         </div>
-        <div class="share-block container">
+        <div id="share-block-top" class="share-block container">
             <div class="fb-like-block">
 				<div class="fb-like" data-href="./index.html" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 			</div>
@@ -184,10 +184,10 @@
         </div>
         <div class="people-contain container">
             <div class="row">
-                <div class="col-md-2 col-xs-4">
+                <div class="col-md-2 col-xs-5">
                     <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/pm.jpg">
                 </div>
-                <div class="col-md-10 col-xs-8">
+                <div class="col-md-10 col-xs-7">
                     <h3><b>新媒體中心／數位內容製作 魏妤庭</b>
                     <h3>一手捧書一手握鍋鏟，是個資訊怪，總好奇新技術在資訊傳遞上的應用，想辦法讓報導更貼近讀者的需要。</h3>
                 </div>
