--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
         </div>
         <div class="people-contain container">
             <div class="row">
-                <div class="col-md-2 col-xs-5">
+                <div class="col-sm-2 col-xs-5">
                     <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/pm.jpg">
                 </div>
-                <div class="col-md-10 col-xs-7">
+                <div class="col-sm-10 col-xs-7">
                     <h3><b>新媒體中心／數位內容製作 魏妤庭</b>
                     <h3>一手捧書一手握鍋鏟，是個資訊怪，總好奇新技術在資訊傳遞上的應用，想辦法讓報導更貼近讀者的需要。</h3>
                 </div>
@@ -220,25 +220,25 @@
         <div id="report" class="container">
             <h6>聯合報聯沙龍研究報告</h6>
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-6 col-md-3">
                     <a href="http://p.udn.com.tw/upf/newmedia/2017_data/20170303_3dmedia/index.html" target="_blank">
                         <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/3Dmodel.jpg">
                         <p>3D模型新聞應用 簡易入門分享</p>
                     </a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-6 col-md-3">
                     <a href="http://p.udn.com.tw/upf/newmedia/2017_data/20170222_maps/index.html" target="_blank">
                         <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/maps.jpg">
                         <p>新聞✖地圖✖資訊 新媒體菜鳥的QGIS心得</p>
                     </a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-6 col-md-3">
                     <a href="http://p.udn.com.tw/upf/newmedia/2017_data/20170208_vrarmr2/index.html" target="_blank">
                         <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/vr.jpg">
                         <p>實境科技發展 給媒體的未來啟示</p>
                     </a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-6 col-md-3">
                     <a href="https://www.facebook.com/groups/UDNNEWMEDIA/?fref=ts" target="_blank">
                         <img class="lazyload" data-src="https://udn.com/upf/newmedia/2017_data/20170508_marketing/image/salon.jpg">
                         <p>聯。沙龍</p>
