change quote css

--- a/index.html
+++ b/index.html
@@ -92,7 +92,23 @@
             <p>每次推出專題前，壓力來源除了原生的「內容正確性、扎實度」，還有「讀者是誰？」的焦慮。</p>
             <p><br/></p>
             <p>為了釐清「讀者是誰？」以及「為什麼讀？」這兩個問題，我們嘗試雜揉廣告溝通、產品設計與社群分眾的概念，力圖讓「溝通」重回新聞與讀者間。以下整理出三點心得與大家分享：</p>
-            <blockquote>Quote Test Quote Test Quote Test Quote Test Quote Test Quote Test Quote Test</blockquote>
+            <div class="quote-contain">
+                <div class="quote-text">許多孩子告訴我們，他們從來沒有踏進過大學一步。訪問大學生，能拓展他們的認知，也會有一個前進的目標。</div>
+                <div class="quote-ref">─ 更生少年關懷協會主任 陳彥君</div>
+            </div>
+        </div>
+        <div class="video-contain">
+            <video preload="metadata" class="rwd-2dv" id="movie-1" src="https://udn.com/upf/newmedia/2017_data/hk_handover_20/video/video1.mp4" playsinline data-target="1"></video>
+            <div style="margin-top: -8px;" class="video-control">
+                <div class="progress hidden-md hidden-lg">
+                    <div id="progress-bar-1" class="progress-bar progress-bar-striped"></div>
+                </div>
+                <div class="img-say-out volume-text hidden-md hidden-lg" data-target="1">點按開聲音</div>
+                <i class="fa fa-spinner fa-pulse video-wait" data-target="1"></i>
+                <i class="fa fa-play video-play hidden-md hidden-lg" data-target="1"></i>
+                <i class="fa fa-volume-off volume hidden-md hidden-lg" data-target="1"></i>
+                <i class="fa fa-repeat replay hidden-md hidden-lg" data-target="1"></i>
+            </div>
         </div>
         <hr>
         <div class="content container">
