--- a/index.html
+++ b/index.html
@@ -7,10 +7,110 @@
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+    <!-- for Facebook -->
+    <meta property="og:title" content="香港是我的家 看香港回歸20年的「變」"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://udn.com/upf/newmedia/2017_data/hk_handover_20/index.html"/>
+    <meta property="og:image" content="https://udn.com/upf/newmedia/2017_data/hk_handover_20/image/fb_index.jpg"/>
+    <meta property="og:site_name" content="聯合報"/>
+    <meta property="article:author" content="https://www.facebook.com/udnplus">
+    <meta property="article:publisher" content="https://www.facebook.com/udnplus">
+    <meta property="og:description" content="鄧小平承諾的「50年不變」，才20年，今天的香港什麼都變了。街上傳統小店消失，被各式珠寶連鎖店取代；走進酒樓，耳裡聽到的普通話多了，廣東話少了，嘴裡嘗的港點，也大多是從大陸運來、機器量產的..."/>
+
+    <meta property="fb:admins" content="671188086">
+    <meta property="fb:app_id" content="1010324812347164">
+
+    <!-- for Google -->
+    <meta name="description" content="鄧小平承諾的「50年不變」，才20年，今天的香港什麼都變了。街上傳統小店消失，被各式珠寶連鎖店取代；走進酒樓，耳裡聽到的普通話多了，廣東話少了，嘴裡嘗的港點，也大多是從大陸運來、機器量產的..."/>
+    <meta name="copyright" content="聯合報"/>
+    <meta name="application-name" content="香港是我的家 看香港回歸20年的「變」"/>
+
+    <!-- Facebook Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+    n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+    document,'script','https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1624500254526892'); // Insert your pixel ID here.
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1624500254526892&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- DO NOT MODIFY -->
+    <!-- End Facebook Pixel Code -->
+
+    <!-- ours google analytic -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-83853620-2', 'auto');
+        ga('create', 'UA-19660006-1', 'auto', {'name' : 'udn'});
+        ga('create', 'UA-44955675-22', 'auto', {'name' : 'theme'});
+        ga('send', 'pageview');
+        ga('udn.send', 'pageview');
+        ga('theme.send', 'pageview');
+        ga('udn.send', 'event', '圖表看時事', 'view', '圖解新聞');
+
+    </script>
+
+    <!-- udn comScore Tag -->
+    <script>
+        var _comscore = _comscore || [];
+        _comscore.push({ c1: "2", c2: "7390954" });
+        (function() {
+        var s = document.createElement("script"), el = document.getElementsByTagName("script")[0]; s.async = true;
+        s.src = (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js";
+        el.parentNode.insertBefore(s, el);
+        })();
+    </script>
+    <noscript>
+    <img src="http://b.scorecardresearch.com/p?c1=2&c2=7390954&cv=2.0&cj=1" />
+    </noscript>
+
+    <!-- udn Alexa Certify Javascript -->
+    <script type="text/javascript">
+        _atrk_opts = { atrk_acct:"aw0Di1a4ZP00aY", domain:"udn.com",dynamic: true};
+        (function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://d31qbv1cthcecs.cloudfront.net/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
+    </script>
+    <noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=aw0Di1a4ZP00aY" style="display:none" height="1" width="1" /></noscript>
+
+    <!-- Begin etu Tag -->
+    <script id="etu-recommender" type="text/javascript">
+        //var atid=rId();
+        //sLogin=GetCkValue("udnmember");
+        var erUrlPrefix='https://rec.udn.com/';
+        var _qevents = _qevents || [];
+        _qevents.push({
+            cid : '頻道：時事話題',
+            act : 'view',
+            cat : ['','','','',''],
+            uid : '',
+            bid : '',
+            pid : '',
+            page:'ARTICLE',
+            rank_cat:'0',
+            rank_pid:'0',
+            title:'香港 是我的家 看香港回歸20年的「變」',
+            tag:[]
+        });
+        (function() {
+            var er = document.createElement('script');
+            er.type = 'text/javascript';
+            er.async = true;
+            er.src = erUrlPrefix + 'er.js?' + (new Date().getTime());
+            var currentJs = document.getElementById('etu-recommender');
+            currentJs.parentNode.insertBefore(er, currentJs);
+        })();
+    </script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
     <link rel="stylesheet" href="css/style.css">
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
