--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+    <link rel="icon" type="image/ico" href="https://udn.com/upf/newmedia/image/udn-icon.ico"/>
+
     <!-- for Facebook -->
     <meta property="og:title" content="香港是我的家 看香港回歸20年的「變」"/>
     <meta property="og:type" content="website"/>
