change fb comment plugin default order to social

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
         </div>
         <div class="fb-comment-block container">
-            <div class="fb-comments" data-href="https://udn.com/upf/newmedia/index.html" data-numposts="5" data-width="100%"></div>
+            <div class="fb-comments" data-href="https://udn.com/upf/newmedia/index.html" data-order-by="social" data-numposts="5" data-width="100%"></div>
         </div>
         <footer>
             <span class="footer-link footer-right-board"><a href="http://www.udngroup.com/" target="_blank">聯合報系</a></span>
