--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
              page:'ARTICLE',
              Rank_cat:'10',
              Rank_pid:'10',
-             title: $('title').text(),
+             title: document.querySelector('title').innerHTML,
              tag:[],
              referral: document.referrer
          });
@@ -214,6 +214,45 @@
             <p>最後用一句話統整上述的答案，就形成「核心溝通主張」，作為專題內容與讀者間的溝通基礎。</p>
         </div>
         <hr>
+        <div id="carousel" class="carousel slide container" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel" data-slide-to="1"></li>
+              <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://lorempixel.com/640/400">
+                <div class="carousel-caption">
+                  圖片一
+                </div>
+              </div>
+              <div class="item">
+                <img src="https://lorempixel.com/640/400">
+                <div class="carousel-caption">
+                  圖片二
+                </div>
+              </div>
+              <div class="item">
+                <img src="https://lorempixel.com/640/400">
+                <div class="carousel-caption">
+                  圖片三
+                </div>
+              </div>
+            </div>
+          
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+        </div>
         <div class="content container">
             <h2>承認吧！「分眾」才是傳播的本質</h2>
             <p>「好了！上線了。」熬了一個晚上，3月30日下午推出〈我戒毒，妹妹卻因毒而死：5個少年染毒的故事〉，開著GA後台觀察分秒變化，數字持續往上增加，背後都是一位對著螢幕的讀者。數字最後來到34萬，並有20位以上縣市首長、政治人物分享，青少年校園毒品的議題從法學、社工、警政等關心這個領域的讀者，向外擴散至一般大眾。</p>
