--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="quote-ref">─ 更生少年關懷協會主任 陳彥君</div>
             </div>
         </div>
-        <div class="video-contain">
+        <!-- <div class="video-contain">
             <video preload="metadata" class="rwd-2dv" id="movie-1" src="https://udn.com/upf/newmedia/2017_data/hk_handover_20/video/video1.mp4" playsinline data-target="1"></video>
             <div style="margin-top: -8px;" class="video-control">
                 <div class="progress hidden-md hidden-lg">
@@ -183,7 +183,7 @@
                 <i class="fa fa-volume-off volume hidden-md hidden-lg" data-target="1"></i>
                 <i class="fa fa-repeat replay hidden-md hidden-lg" data-target="1"></i>
             </div>
-        </div>
+        </div> -->
         <hr>
         <div class="content container">
             <h2>一句話講清楚 為何這事值得關注！</h2>
