--- a/index.html
+++ b/index.html
@@ -323,12 +323,12 @@
             <div class="logo-block">
                 <div class="udn-logo">
                     <a href="https://udn.com/news/index" target="_blank">
-                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/udn-logo.jpg">
+                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/udn-logo.svg">
                     </a>
                 </div>
                 <div class="nmd-logo">
                     <a href="https://udn.com/upf/newmedia/udn_newmedia/index.html" target="_blank">
-                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/nmd-logo.png">
+                        <img class="lazyload" data-src="https://udn.com/upf/newmedia/image/nmd-logo.svg">
                     </a>
                 </div>
             </div>
